; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_api.c_unregister_tcf_proto_ops.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_api.c_unregister_tcf_proto_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcf_proto_ops = type { %struct.tcf_proto_ops* }

@ENOENT = common dso_local global i32 0, align 4
@cls_mod_lock = common dso_local global i32 0, align 4
@tcf_proto_base = common dso_local global %struct.tcf_proto_ops* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unregister_tcf_proto_ops(%struct.tcf_proto_ops* %0) #0 {
  %2 = alloca %struct.tcf_proto_ops*, align 8
  %3 = alloca %struct.tcf_proto_ops*, align 8
  %4 = alloca %struct.tcf_proto_ops**, align 8
  %5 = alloca i32, align 4
  store %struct.tcf_proto_ops* %0, %struct.tcf_proto_ops** %2, align 8
  %6 = load i32, i32* @ENOENT, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %5, align 4
  %8 = call i32 @write_lock(i32* @cls_mod_lock)
  store %struct.tcf_proto_ops** @tcf_proto_base, %struct.tcf_proto_ops*** %4, align 8
  br label %9

9:                                                ; preds = %19, %1
  %10 = load %struct.tcf_proto_ops**, %struct.tcf_proto_ops*** %4, align 8
  %11 = load %struct.tcf_proto_ops*, %struct.tcf_proto_ops** %10, align 8
  store %struct.tcf_proto_ops* %11, %struct.tcf_proto_ops** %3, align 8
  %12 = icmp ne %struct.tcf_proto_ops* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %9
  %14 = load %struct.tcf_proto_ops*, %struct.tcf_proto_ops** %3, align 8
  %15 = load %struct.tcf_proto_ops*, %struct.tcf_proto_ops** %2, align 8
  %16 = icmp eq %struct.tcf_proto_ops* %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  br label %22

18:                                               ; preds = %13
  br label %19

19:                                               ; preds = %18
  %20 = load %struct.tcf_proto_ops*, %struct.tcf_proto_ops** %3, align 8
  %21 = getelementptr inbounds %struct.tcf_proto_ops, %struct.tcf_proto_ops* %20, i32 0, i32 0
  store %struct.tcf_proto_ops** %21, %struct.tcf_proto_ops*** %4, align 8
  br label %9

22:                                               ; preds = %17, %9
  %23 = load %struct.tcf_proto_ops*, %struct.tcf_proto_ops** %3, align 8
  %24 = icmp ne %struct.tcf_proto_ops* %23, null
  br i1 %24, label %26, label %25

25:                                               ; preds = %22
  br label %31

26:                                               ; preds = %22
  %27 = load %struct.tcf_proto_ops*, %struct.tcf_proto_ops** %3, align 8
  %28 = getelementptr inbounds %struct.tcf_proto_ops, %struct.tcf_proto_ops* %27, i32 0, i32 0
  %29 = load %struct.tcf_proto_ops*, %struct.tcf_proto_ops** %28, align 8
  %30 = load %struct.tcf_proto_ops**, %struct.tcf_proto_ops*** %4, align 8
  store %struct.tcf_proto_ops* %29, %struct.tcf_proto_ops** %30, align 8
  store i32 0, i32* %5, align 4
  br label %31

31:                                               ; preds = %26, %25
  %32 = call i32 @write_unlock(i32* @cls_mod_lock)
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @write_lock(i32*) #1

declare dso_local i32 @write_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
